# brisc

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  justfile
.config/: zepter.yaml
.github/: codecov.yml
.github/workflows/: docker.yaml  rust_ci.yaml
crates/emu/: Cargo.toml  README.md
crates/emu/benches/: bench.rs  rs_programs.rs
crates/emu/src/: cfg.rs  lib.rs  test_utils.rs
crates/emu/src/elf/: load.rs  mod.rs
crates/emu/src/st/: builder.rs  mod.rs
crates/hw/: Cargo.toml  README.md
crates/hw/src/: errors.rs  kernel.rs  lib.rs  linux.rs
crates/hw/src/memory/: errors.rs  interface.rs  mod.rs  page.rs
crates/hw/src/pipeline/: decode.rs  execute.rs  fetch.rs  memory.rs  mod.rs  register.rs  writeback.rs
crates/isa/: Cargo.toml  README.md
crates/isa/src/: arch.rs  bits.rs  errors.rs  functions.rs  instructions.rs  lib.rs
crates/isa/src/instructions/: b_type.rs  i_type.rs  j_type.rs  r_type.rs  s_type.rs  u_type.rs
crates/isa/src/instructions/rvc/: mod.rs  types.rs
docker/: README.md  docker-bake.hcl  riscv-unknown-elf-toolchain.dockerfile  rust-riscv-cross.dockerfile
rv-tests/: .gitignore  README.md  build_std_tests.sh  justfile
rv-tests/rs-programs/: Cargo.toml
rv-tests/rs-programs/src/: eth_transfer.rs  fib.rs  quicksort_heap.rs
