[package]
name = "brisc-emu"
description = "A simple RISC-V i{mc} {64/32}-bit emulator"
version = "0.0.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
# Local
brisc-hw = { path = "../hw", default-features = false }

# External
elf = { version = "0.7.4", default-features = false }

[dev-dependencies]
rstest.workspace = true
criterion = "0.5"

[features]
default = ["64-bit", "m", "c"]

# Architecture features
64-bit = ["brisc-hw/64-bit"]
m = ["brisc-hw/m"]
c = ["brisc-hw/c"]
