[package]
name = "brisc-emu"
description = "A simple RISC-V i{mac} {64/32}-bit emulator"
version = "0.0.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
# Local
brisc-hw.workspace = true

# External
elf = { version = "0.7.4", default-features = false }

[dev-dependencies]
rstest.workspace = true

[features]
default = ["64-bit", "m", "a", "c"]

# Architecture features
64-bit = ["brisc-hw/64-bit"]
m = ["brisc-hw/m"]
a = ["brisc-hw/a"]
c = ["brisc-hw/c"]
