[package]
name = "brisc-emu"
description = "A simple RISC-V i{mac} {64/32}-bit emulator"
version = "0.0.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
# Local
brisc-hw.workspace = true

# External
elf = { version = "0.8.0", default-features = false }

# `test-utils` feature
rstest = { workspace = true, optional = true }

[dev-dependencies]
rstest.workspace = true
criterion.workspace = true

[features]
default = [ "64-bit", "a", "c", "m" ]
test-utils = [ "dep:rstest" ]

# Architecture features
64-bit = [ "brisc-hw/64-bit" ]
m = [ "brisc-hw/m" ]
a = [ "brisc-hw/a" ]
c = [ "brisc-hw/c" ]

[[bench]]
harness = false
name = "emu"
path = "benches/bench.rs"
